--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,18 @@
-# Node rules:
-## Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
-.grunt
+.DS_Store
+node_modules/
+/dist/
+.vuepress/dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-## Dependency directory
-## Commenting this out is preferred by some people, see
-## https://docs.npmjs.com/misc/faq#should-i-check-my-node_modules-folder-into-git
-node_modules
-
-# Book build output
-_book
-
-# eBook build output
-*.epub
-*.mobi
-*.pdf
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+.temp
+temp
+软件架构探索：The Fenix Project.pdf
