fix branch main

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,10 @@ deploy:
     keep_history: true
     target-branch: gh-pages
     on:
-      branch: master
+      branch: main
   - provider: script
     keep_history: true
     skip_cleanup: true
     script: npm run deoply:refresh-cdn
     on:
-      branch: master
+      branch: main
