--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "awesome-fenix",
+  "name": "latitude-learning",
   "version": "1.0.0",
   "description": "explore architecture",
   "main": "index.js",
