--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "type": "git",
     "url": "git+https://github.com/zlykernel/latitude-learning-basic.git.git"
   },
-  "author": "icyfenix@gmail.com",
+  "author": "zlykernel@gmail.com",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/zlykernel/latitude-learning-basic.git/issues"
