--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 script:
   - npm run build
   # 配置域名
-  # - echo "icyfenix.cn" >> .vuepress/dist/CNAME
+  - echo "baisc.ll.zhaoliangyuan.cn" >> .vuepress/dist/CNAME
   # 以下为编译PDF，耗时较长，可以考虑注释掉，手工触发
   # - echo "Starting to Export PDF..."
   # - sudo apt-get update
